--- a/products/strahovka-covid-19/index.html
+++ b/products/strahovka-covid-19/index.html
@@ -366,7 +366,9 @@
 					'phone': '',
 					'url': 'https://finansist-rzn.ru/products/strahovka-covid-19/',
 					'city': 'Рязань',
-					'utm_source': "Финансист Рязани Рязань"
+					'utm_source': "Финансист Рязани Рязань",
+					'source_id': "627",
+					'broker_id': "17"
 				},
 				
 
